--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing="30">
             <tr>
-                <td><img src="fotoEmerson.png" alt="emerson profile picture"></td>
+                <td><img src="images/fotoEmerson.png" alt="emerson profile picture"></td>
                 <td><h1>Emerson Abello Rivera</h1>
                 <p><em>Aprendiz de <strong> HTML</strong></em></p>
                 <p>Estoy feliz de empezar una nueva carrera </p></td>
