--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </tr>
         </table>
         <hr>
-        <p><a href="estudiosREalizados.html">Estudios Realizados</a></P>
+        <p><a href="estudiosRealizados.html">Estudios Realizados</a></P>
         <p><a href="Contactame.html">Contacto</a></p>
         <hr>
         <h3>Habilidades</h3>
