--- a/index.html
+++ b/index.html
@@ -3,12 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <title> 😈 Emerson's Personal Site</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <table cellspacing="30">
             <tr>
                 <td><img src="images/fotoEmerson.png" alt="emerson profile picture"></td>
-                <td><h1>Emerson Abello Rivera</h1>
+                 <td><h1>
+                    <span class=sr-only>
+                      Emerson
+                    </span>
+                    <span aria-hidden="true">
+                      <span>Emers</span>
+                      <span class=stretch-o></span>
+                      <span>n</span>
+                    </span>
+                    <span>Abello</span>
+                    <span>Rivera</span>
+                </h1>
                 <p><em>Aprendiz de <strong> HTML</strong></em></p>
                 <p>Estoy feliz de empezar una nueva carrera </p></td>
             </tr>
